Fixed a z-index issue

--- a/src/components/NavBar/MenyNavbar.css
+++ b/src/components/NavBar/MenyNavbar.css
@@ -1,7 +1,7 @@
 .menu-navbar {
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 400;
   padding: 1em 0;
 }
 
