--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -67,8 +67,6 @@
     cursor: pointer; 
     width: 60px;
     padding: 0.2em;
-    /* border: 2px solid rgba(255, 0, 0, 0.4);
-    border-radius: 25% 25%; */
 }
 
 .navbar-smallscreen_overlay {
@@ -84,7 +82,7 @@
     justify-content: center;
 
     flex-direction: column;
-    z-index: 5;
+    z-index: 500;
 }
 
 .navbar-smallscreen_overlay .overlay__close {
